--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "adapt-rewards",
   "version": "2.0.2",
-  "framework": "2.0.6",
+  "framework": "^2.0.6",
   "homepage": "https://github.com/deltanet/adapt-rewards",
   "issues": "https://github.com/deltanet/adapt-rewards/issues",
   "displayName" : "Rewards",
